# AI-Engnieer-Roadmap-Study-Material

./: .gitignore  ROADMAP.md
memmory_checkpoint/: .gitignore  CLAUDE.md  command.md  pyproject.toml
memmory_checkpoint/.github/: copilot-instructions.md
memmory_checkpoint/claude/: teaching-preferences.md
memmory_checkpoint/docs/: langgraph-memory-checkpointing-production-theory.md  langgraph-memory-crash-course-roadmap.md  lesson-notes.md  progress-tracker.md  roadmap-production-grade-project-guide.md
memmory_checkpoint/docs/claude_guides_lesson/: 5.Mannual Summarization.md  6.Langmem Summarization.md
memmory_checkpoint/src/app/: main.py
memmory_checkpoint/src/app/agent/: graph.py  tools.py
memmory_checkpoint/src/app/api/: routes_chat.py  routes_debug.py
memmory_checkpoint/src/app/core/: config.py
memmory_checkpoint/src/app/db/: base.py  checkpointer_pool.py  create_tables.py  models.py  seed.py  session.py
memmory_checkpoint/src/app/memory/: langmem_summarizer.py  manual_summarizer.py
month-1/: main-old.py  pyproject.toml
month-1/assignments/: w02-a1-python-ai-toolkit.md  w02-a2-pydantic-structured-outputs.md  w02-a3-fastapi-llm-endpoint.md  w03-a1-prompt-engineering-lab.md  w03-a2-multi-provider-api-lab.md  w04-a1-semantic-search-engine.md
month-1/assignments_instructions/: w01-a1-tokenizer-explorer.md  w01-a2-embedding-playground.md
month-1/fast_api_traversy/: storage.py
month-1/fast_api_traversy/middleware/: timer.py
month-1/fast_api_traversy/routes/: issues.py
month-1/practice_coding/: basic-practice.py  main-old.py  main.py
month-1/practice_coding/data/: Issues.json
month-1/practice_coding/fast_api_traversy/: schemas.py
month-1/practice_coding/fast_api_traversy/routes/: basic_routes.py
month-1/practice_coding/openai_sdk/: README.md  config.py  dependencies.py  main.py  pyproject.toml  res.json
month-1/practice_coding/openai_sdk/docs/: 2-assistant-api-responses-api-theory.md  3-responses-api-code-guide.md  4-stream-with chat-completion-theory-and code-guide.md  chat-completion-guide.md
month-1/practice_coding/openai_sdk/routers/: chat.py  responses.py  streaming_with_chat.py
month-1/practice_coding/openai_sdk/schemas/: chat.py  responses.py  streaming_with_chat.py
month-1/practice_coding/openai_sdk/services/: chat_service.py  responses_service.py  streaming_with_chat_service.py
month-1/practice_coding/tokenizer_explorer/: cosine_similarity.py  multilingual.py  tokenizers.py
month-1/roadmaps-weekly/: month-01-roadmap.md  python-env-setup.md  week-01-llm-fundamentals.md  week-02-python-for-ai.md  week-03-llm-apis-prompt-engineering.md  week-04-embeddings-vector-search.md
month-1/tokenizer_explorer/: multilingual.py  w01-a1-tokenizer-explorer.ipynb
month-2/: month-02-roadmap.md  week-05-rag-architecture.md  week-06-langgraph-advanced-rag.md  week-07-evals-observability.md  week-08-rag-capstone.md
month-3/: week-09-agent-fundamentals.md  week-10-multi-agent-mcp.md  week-11-production-infra.md  week-12-agentic-capstone.md
month-4/: week-13-fine-tuning-advanced.md  week-14-multimodal-portfolio.md  week-15-interview-prep.md  week-16-job-hunt.md
study-notes/: 1.1 How LLMs Work The Big Picture.md  1.2 The Transformer Architecture.md  1.3 Tokenization & BPE.md  1.4  Embeddings & Vector Space.md  1.5 Pre Training & Loss Functon.md  1.6 Alignment RLHF, SFT, DPO.md  1.7 Ineference Sampiling KV Cache.md  1.8 Positional Encoding RoPo.md
