[project]
name = "memmory_checkpoint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.139.0",
  "langchain>=1.3.12",
  "langchain-openai>=1.3.4",
  "langgraph>=1.2.9",
  "langgraph-checkpoint-postgres>=3.1.0",
  "langmem>=0.0.30",
  "openai>=2.45.0",
  "psycopg[binary,pool]>=3.3.4",
  "pydantic-settings>=2.14.2",
  "python-dotenv>=1.2.2",
  "sqlalchemy>=2.0.51",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
[dependency-groups]
dev = ["mypy>=2.2.0", "ruff>=0.15.21"]

# ── Ruff configuration ─────────────────────────────────────────────────────
[tool.ruff]
line-length = 98

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes (unused imports, undefined names)
  "I",   # isort (import ordering)
  "UP",  # pyupgrade (suggest modern Python syntax)
  "B",   # flake8-bugbear (common bugs and design problems)
  "SIM", # flake8-simplify (suggests simpler code)
]
# Ignore specific rules that conflict with AI/ML patterns
ignore = ["E501", "B904", "B008"] # Line length handled by formatter, not linter
unfixable = ["F401"]              # give warining to unused variable but won't delete it
[tool.ruff.format]
# Match Black's quote style so diff noise is minimal if you ever migrate
quote-style = "double"
indent-style = "space"
