[project]
name = "openai-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.139.0",
  "numpy>=2.5.0",
  "openai>=2.44.0",
  "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = ["dotenv>=0.9.9", "pytest>=9.1.1", "ruff>=0.15.19"]

# ── Ruff configuration ─────────────────────────────────────────────────────
[tool.ruff]
line-length = 98

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes (unused imports, undefined names)
  "I",   # isort (import ordering)
  "UP",  # pyupgrade (suggest modern Python syntax)
  "B",   # flake8-bugbear (common bugs and design problems)
  "SIM", # flake8-simplify (suggests simpler code)
]
# Ignore specific rules that conflict with AI/ML patterns
ignore = ["E501", "B904", "B008"] # Line length handled by formatter, not linter
unfixable = ["F401"]              # give warining to unused variable but won't delete it
[tool.ruff.format]
# Match Black's quote style so diff noise is minimal if you ever migrate
quote-style = "double"
indent-style = "space"

# ── Mypy (strict type checking for CI) ────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false                # Set to true as your type coverage grows
ignore_missing_imports = true # Many AI libs have incomplete stubs

[tool.uv.workspace]
members = ["openai_sdk"]
